force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <label>Stundennachweis</label>
    <nameField>
        <label>Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stundennachweise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>