force-app/main/default/objects/Timesheet__c/fields/AssignmentEnd__c.field-meta.xml
<CustomField>
    <fullName>AssignmentEnd__c</fullName>
    <label>Assignment End</label>
    <type>Date</type>
</CustomField>