force-app/main/default/objects/Timesheet__c/fields/AssignmentStart__c.field-meta.xml
<CustomField>
    <fullName>AssignmentStart__c</fullName>
    <label>Assignment Start</label>
    <type>Date</type>
</CustomField>