force-app/main/default/objects/Timesheet__c/fields/HoursTotal__c.field-meta.xml
<CustomField>
    <fullName>HoursTotal__c</fullName>
    <label>Hours Total</label>
    <summarizedField>Hours__c.Amount__c</summarizedField>
    <summaryForeignKey>Hours__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>