force-app/main/default/objects/Timesheet__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Juli 2021</fullName>
            </value>
            <value>
                <fullName>August 2021</fullName>
            </value>
            <value>
                <fullName>September 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>