force-app/main/default/objects/Timesheet__c/fields/OpenForBookings__c.field-meta.xml
<CustomField>
    <fullName>OpenForBookings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open For Bookings</label>
    <type>Checkbox</type>
</CustomField>