force-app/main/default/objects/Timesheet__c/fields/RABookingCodes__c.field-meta.xml
<CustomField>
    <fullName>RABookingCodes__c</fullName>
    <label>RA Booking Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>